# ParseXMFA2

./: README.md  pyproject.toml  setup.py
ParseXMFA2/: Auxiliary.py  CLI.py  Globals.py  ParseXMFA2.py  __main__.py
